fixed top padding on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -362,7 +362,7 @@ div.grid-item.pacman.dead:after {
 
 @media only screen and (max-width: 600px) {
   body{
-
+    justify-content: flex-start;
   }
 
   header{
@@ -374,6 +374,7 @@ div.grid-item.pacman.dead:after {
   header h2 {
     font-size: 1em;
     left:40%;
+    top:-30%;
   }
 
   header .pacman-title {
